@startuml Railway Reservation System

' Styling
skinparam class {
    BackgroundColor LightBlue
    ArrowColor Black
    BorderColor Navy
}

' Entities
entity "Passenger" as passenger {
    * passenger_id : INT <<PK>>
    --
    * first_name : VARCHAR(50)
    * last_name : VARCHAR(50)
    * email : VARCHAR(100) <<unique>>
    * phone : VARCHAR(15)
    * date_of_birth : DATE
    * concession_category : ENUM
    * created_at : TIMESTAMP
}

entity "Station" as station {
    * station_id : INT <<PK>>
    --
    * station_code : CHAR(5) <<unique>>
    * station_name : VARCHAR(100)
    * city : VARCHAR(50)
    * state : VARCHAR(50)
}

entity "Route" as route {
    * route_id : INT <<PK>>
    --
    * route_name : VARCHAR(100)
    * source_station_id : INT <<FK>>
    * destination_station_id : INT <<FK>>
    * distance : INT
}

entity "Train" as train {
    * train_id : INT <<PK>>
    --
    * train_number : VARCHAR(10) <<unique>>
    * train_name : VARCHAR(100)
    * route_id : INT <<FK>>
    * total_seats : INT
}

entity "TrainClass" as trainclass {
    * class_id : INT <<PK>>
    --
    * train_id : INT <<FK>>
    * class_type : ENUM
    * total_seats : INT
    * fare_per_km : DECIMAL(10,2)
}

entity "Schedule" as schedule {
    * schedule_id : INT <<PK>>
    --
    * train_id : INT <<FK>>
    * station_id : INT <<FK>>
    * arrival_time : TIME
    * departure_time : TIME
    * day_number : INT
}

entity "Ticket" as ticket {
    * ticket_id : INT <<PK>>
    --
    * pnr_number : VARCHAR(10) <<unique>>
    * passenger_id : INT <<FK>>
    * train_id : INT <<FK>>
    * class_id : INT <<FK>>
    * source_station_id : INT <<FK>>
    * destination_station_id : INT <<FK>>
    * journey_date : DATE
    * booking_date : TIMESTAMP
    * status : ENUM
    * seat_number : VARCHAR(10)
    * fare : DECIMAL(10,2)
}

entity "Payment" as payment {
    * payment_id : INT <<PK>>
    --
    * ticket_id : INT <<FK>>
    * amount : DECIMAL(10,2)
    * payment_mode : ENUM
    * payment_status : ENUM
    * transaction_id : VARCHAR(50) <<unique>>
    * payment_date : TIMESTAMP
}

entity "Cancellation" as cancellation {
    * cancellation_id : INT <<PK>>
    --
    * ticket_id : INT <<FK>>
    * cancellation_date : TIMESTAMP
    * refund_amount : DECIMAL(10,2)
    * refund_status : ENUM
}

' Relationships
route }|--|| station : "has source"
route }|--|| station : "has destination"
train }|--|| route : "follows"
trainclass }|--|| train : "belongs to"
schedule }|--|| train : "has"
schedule }|--|| station : "stops at"
ticket }|--|| passenger : "booked by"
ticket }|--|| train : "booked for"
ticket }|--|| trainclass : "in class"
ticket }|--|| station : "from"
ticket }|--|| station : "to"
payment }|--|| ticket : "for"
cancellation }|--|| ticket : "of"

@enduml 